sysyruntimelibrary-master/functional_test/26_if_test5.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/26_if_test5.sy:17:22: error: syntax error, unexpected R_PARENTHESIS
17|   return (if_if_Else()
  |                       ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/26_if_test5.sy:0:0: error: not find main function
